# ICP_Rust_Dice

./: Cargo.toml  README.md  dfx.json  dfx.json.bak  index.html  package-lock.json  package.json
src/declarations/dice_app_backend/: dice_app_backend.did.d.ts  dice_app_backend.did.js  index.d.ts  index.js
src/declarations/dice_app_frontend/: index.d.ts  index.js
src/dice_app_backend/: Cargo.toml  dice_app_backend.did
src/dice_app_backend/src/: lib.rs
src/dice_app_frontend/: .env  App.jsx  index.html  index.scss  main.jsx  package.json  vite.config.js
src/dice_app_frontend/src/: App.jsx  main.jsx
